# KHRSpeechCommander

./: .gitignore  LICENSE-BSD  README.md  pyproject.toml
src/: KHRSpeechCommander.py  app.py
src/connection/: Makefile  conn2khr.c
src/connection/librcb4/: Makefile  Makefile:Zone.Identifier
src/speechanalysis/: analyzer.py  command_dict.py  commander.py  connector.py  content_field.py  sharedqueue.py
